--- a/backend/chatpaat_app/templates/index.html
+++ b/backend/chatpaat_app/templates/index.html
@@ -31,7 +31,7 @@
         <h1
           class="text-4xl font-extrabold bg-gradient-to-r from-pink-600 via-purple-600 to-blue-600 bg-clip-text text-transparent"
         >
-          About ChatPaat
+          About ChatPaat (Inspired By ChatGPT)
         </h1>
       </div>
 
